<resources>
    <string name="app_name" translatable="false">Text to Speech Converter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title" translatable="false">Text to speech</string>
    <string name="new_project">New Project</string>
    <string name="welcome_title">Welcome to Text to Speech</string>
    <string name="welcome_subtitle">Transform text into speech, easier than ever.</string>
    <string name="continue_button">Continue</string>
    <string name="next_button">Next</string>
    <string name="by_continue">By continuing, you agree to our</string>
    <string name="policy">Privacy Policy</string>
    <string name="and">and</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="and_symbol">&amp;</string>
    <string name="use_preferred_voice">Use preferred voice</string>
    <string name="listen_to_text">Listen to text faster, learn more</string>
    <string name="available_in_100_languages">Available in 100+ Languages</string>
    <string name="high_quality_natural_voices_and_celebrity_voices">High quality natural voices and celebrity voices</string>
    <string name="text_to_speech_pro" translatable="false">Text to Speech PRO</string>
    <string name="read_anything_aloud_in_top_quality_voices">Read anything aloud in top-quality voices</string>
    <string name="support_more_than_100_languages">Supports more than 100 languages</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="use_the_application_without_being_bothered_by_ads">Use the application without being bothered by ads</string>
    <string name="load_audio_file">Load your audio file</string>
    <string name="all_your_documents_pdfs_and_more_are_read_to_you">Download text into mp3 file</string>
    <string name="weekly">Weekly</string>
    <string name="billed_weekly">Billed weekly</string>
    <string name="billed_yearly">Billed annually</string>
    <string name="annual">Annually</string>
    <string name="save_30">SAVE 30%</string>
    <string name="original">Original đ7,500,000/yr</string>
    <string name="cancel_anytime_pro">Cancel any time</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="project">Project</string>
    <string name="you_don_t_have_any_projects_yet">You don’t have any projects yet.</string>
    <string name="try_package" translatable="false">Try</string>
    <string name="pro" translatable="false">Pro</string>
    <string name="more_than_100_languages">More than 100 languages</string>
    <string name="free_trial_enabled">Free Trial Enabled</string>
    <string name="three_days_free_trial_auto_renewal">3 Days Free Trial, Auto Renewal</string>
    <string name="three_days_free_trial" translatable="false">3 Days Free Trial</string>
    <string name="billed_week">Billed Week, Auto Renewal</string>
    <string name="cancel_anytime">, cancel anytime</string>
    <string name="billed_year">Billed Year, Auto Renewal</string>
    <string name="yearly_price">200.000đ /Year</string>
    <string name="try_for_free">Try for Free</string>
    <string name="download_audio">Download Audio</string>
    <string name="listen_with_best_voices">Listen with top voices anytime, no internet needed</string>
    <string name="rename_file">Rename File</string>
    <string name="delete_file">Delete File</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete</string>
    <string name="this_action_cannot_be_undone">This action cannot be undone.</string>
    <string name="save">Save</string>
    <string name="please_enter_or_paste_your_text">Please enter or paste your text...</string>
    <string name="clear">Clear</string>
    <string name="audio_control">Audio Control</string>
    <string name="pitch">Pitch</string>
    <string name="speed">Speed</string>
    <string name="volume">Volume</string>
    <string name="generate">Generate</string>
    <string name="re_generate">Re-Generate</string>
    <string name="loading_audio">Loading audio, please wait...</string>
    <string name="select_voice">Select voice</string>
    <string name="voice_apparatus">Voice apparatus</string>
    <string name="default_voice_engine">Default voice engine</string>
    <string name="edge_text_to_speech" translatable="false">Edge Text To Speech</string>
    <string name="language">Language</string>
    <string name="voice">Voice</string>
    <string name="new_to_old">(new to old)</string>
    <string name="old_to_new">(old to new)</string>
    <string name="a_z">(A-Z)</string>
    <string name="z_a">(Z-A)</string>
    <string name="last_modified">Last modified</string>
    <string name="name">Name</string>
    <string name="get_pro">Get Pro</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Feedback</string>
    <string name="rate_app">Rate app</string>
    <string name="app_theme">App theme</string>
    <string name="share_app">Share app</string>
    <string name="more_apps">More Apps</string>
    <string name="downloading_audio">Dowloading Audio...</string>
    <string name="downloaded_successfully">Downloaded successfully</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="tell_us_the_problem_you_encountered">Tell us the problem you encountered</string>
    <string name="please_provide_as_much_detail_as_you_can">Please provide as much detail as you can...</string>
    <string name="submit">Submit</string>
    <string name="we_will_try_our_best_to_improve_it">We will try our best to improve it. </string>
    <string name="thanks_for_your_feedback">Thanks for your feedback</string>
    <string name="sorry_for_the_inconvenience">Sorry for the inconvenience.</string>
    <string name="ok">OK</string>
    <string name="rate_your_experience">Rate your experience</string>
    <string name="your_good_rating_is_very_valuable_for_us">Your good rating is very valuable for us.</string>
    <string name="please_take_a_minute_to_rate_us">Please take a minute to rate us.</string>
    <string name="i_will_do_it_later">I’ll do it later</string>
    <string name="send_review">Send review</string>
    <string name="user_interface">User interface</string>
    <string name="private_folder">Private Folder</string>
    <string name="notification">Notification</string>
    <string name="support">Support</string>
    <string name="other">Other</string>
    <string name="text_rate_google_play">Please rate us 5* on Google Play. Thank you!</string>
    <string name="text_need_feedback">Please feedback.</string>
    <string name="text_share_app_title">My application name</string>
    <string name="text_recommend">I managed to convert text into speech with this app — want to give it a try?</string>
    <string name="text_choose_tools_share_app">Share app via…</string>
    <string name="text_feedback_from_app" translatable="false">Feedback from app %1$s</string>
    <string name="text_email_device" translatable="false">Device:</string>
    <string name="text_email_sdk" translatable="false">Android SDK:</string>
    <string name="text_choose_tools" translatable="false">Send email via…</string>
    <string name="version">Version</string>
    <string name="database">Database</string>
    <string name="search">Search...</string>
    <string name="try_now">Try now</string>
    <string name="continue_with_ads">Continue with Ads</string>
    <string name="already_subscribed">Already subscribed</string>
    <string name="error_try_again">Error! Try again</string>
    <string name="text_month">1 month</string>
    <string name="text_year">1 year</string>
    <string name="text_unknown">Unknown</string>
    <string name="week">Week</string>
    <string name="year">Year</string>
    <string name="name_is_not_null">Name cannot be empty</string>
    <string name="rename_success">Rename success!</string>
    <string name="name_duplicate">Name duplicated!</string>
    <string name="subscription_management">Manage Subscription</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="premium">Premium</string>
    <string name="current_plan">Current Plan</string>
    <string name="plan_name">Plan Name</string>
    <string name="price">Price</string>
    <string name="billing_cycle">Billing Cycle</string>
    <string name="status">Status</string>
    <string name="active">Active</string>
    <string name="auto_renew">Auto-renews on</string>
    <string name="undefined">Undefined</string>
    <string name="expires_on">Expires on</string>
</resources>