<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_delete"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_success"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_semibold"
        android:text="@string/thanks_for_your_feedback"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/we_will_try_our_best_to_improve_it"
        android:textColor="#515152"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/sorry_for_the_inconvenience"
        android:textColor="#515152"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_ok"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#214DFC"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="16dp" />

</androidx.appcompat.widget.LinearLayoutCompat>