<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_delete"
    android:orientation="vertical"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:src="@drawable/ic_rate"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/roboto_semibold"
        android:text="@string/rate_your_experience"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/your_good_rating_is_very_valuable_for_us"
        android:textColor="#515152"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/please_take_a_minute_to_rate_us"
        android:textColor="#515152"
        android:textSize="14sp" />

    <per.wsj.library.AndRatingBar
        android:id="@+id/rb_star"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        app:starDrawable="@drawable/ic_star_filled"
        app:bgDrawable="@drawable/ic_star_empty"
        android:numStars="5"
        android:rating="5"
        android:stepSize="1"
        app:starSpacing="10dp"
        app:starColor="#FFC034"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/i_will_do_it_later"
            android:textColor="#214DFC"
            android:textAllCaps="false"
            android:backgroundTint="#ECF5FF"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_send"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="@string/send_review"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:backgroundTint="#214DFC"
            app:cornerRadius="16dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>