<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.FeedbackActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_nav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="51dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="2dp"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/feedback"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_medium"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_how_can"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cl_nav"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="28dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/how_can_we_help_you"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_medium"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_tell_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_how_can"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/tell_us_the_problem_you_encountered"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_regular"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_tell_us"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/rv_problem"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_grey_rounded_12"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="4dp"
            android:layout_marginBottom="12dp"
            android:background="@null"
            android:fontFamily="@font/roboto_regular"
            android:gravity="start|top"
            android:hint="@string/please_provide_as_much_detail_as_you_can"
            android:inputType="textMultiLine"
            android:scrollHorizontally="false"
            android:textColor="@color/black"
            android:textColorHint="#9B9B9C"
            android:textSize="14sp"
            android:lines="8"
            android:enabled="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_sumbit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="16dp"
        android:paddingVertical="16dp"
        android:text="@string/submit"
        android:textColor="@color/black"
        android:backgroundTint="#F1F1F1"
        app:cornerRadius="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>