<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet_delete"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/delete"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_semibold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="10dp"
        android:layout_gravity="center">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_sure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/are_you_sure_you_want_to_delete"
            android:textSize="16sp"
            android:textColor="#A7A8AE"
            android:fontFamily="@font/roboto_regular"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_sure"
            android:layout_marginStart="4dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:textSize="16sp"
            android:textColor="#A7A8AE"
            android:fontFamily="@font/roboto_regular"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/this_action_cannot_be_undone"
        android:textSize="16sp"
        android:textColor="#A7A8AE"
        android:fontFamily="@font/roboto_regular"/>
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#214DFC"
            android:textAllCaps="false"
            android:backgroundTint="#ECF5FF"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_delete"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:backgroundTint="#214DFC"
            app:cornerRadius="16dp"/>
        
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>