<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet_delete"
    android:padding="20dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:text="@string/rename_file"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto_semibold"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:background="@drawable/bg_rename_et">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/iv_clear"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="12dp"
            android:padding="16dp"
            android:background="@null"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:singleLine="true"
            style="@style/CustomEditTextStyle"
            android:fontFamily="@font/roboto_regular"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_close_sheet"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:weightSum="2"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#214DFC"
            android:textAllCaps="false"
            android:backgroundTint="#ECF5FF"
            app:cornerRadius="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_save"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:backgroundTint="#214DFC"
            app:cornerRadius="16dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>